--- a/TP3-ClinicaSalud+/package.json
+++ b/TP3-ClinicaSalud+/package.json
@@ -29,6 +29,7 @@
     "morgan": "^1.10.0",
     "pug": "^3.0.3",
     "sequelize": "^6.37.7",
+    "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   }
 }
