--- a/TP3-ClinicaSalud+/package.json
+++ b/TP3-ClinicaSalud+/package.json
@@ -26,6 +26,7 @@
     "express": "^5.1.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "method-override": "^3.0.0",
     "morgan": "^1.10.0",
     "pug": "^3.0.3",
     "sequelize": "^6.37.7",
